create sign Up component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,16 +10,19 @@
         <h1>Log in</h1>
         <div class="blueLine"></div>
         <form>
-            <input class="inputField" type="email" placeholder="Email">
-            <input class="inputField" type="password" placeholder="Passwort">
-            <div>
-                <input type="checkbox">
-                <label> Remember me</label>
+
+
+            <input class="inputField inputMail" type="email" placeholder="Email">
+            <input class="inputField inputPassword" type="password" placeholder="Password">
+            <div class="rememberMe">
+                <img src="../../assets/img/unselect.png">
+                <span> Remember me</span>
                 <a>Forgot my password</a>
             </div>
-            <div>
-                <button>Log in</button>
-                <button>Guest Log in</button>
+
+            <div class="buttons">
+                <button class="loginButton">Log in</button>
+                <button class="guestButton">Guest Log in</button>
             </div>
         </form>
     </div>
