create menu and header, start with summary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,33 @@
-<app-sign-up>
+<div class="mainContainer">
+    <header>
+        <span>Kanban Project Management Tool</span>
+        <div class="headerRight">
+            <img src="../assets/img/question.png">
+            <img class="user" src="../assets/img/user.png">
+        </div>
+    </header>
+    <div class="menu">
+        <img class="logo" src="../assets/img/logowhite.png">
+        <div class="links">
+            <a class="select" href="#"><img src="../assets/img/summary.png">Summary</a>
+            <a href="#"><img src="../assets/img/board.png">Board</a>
+            <a href="#"><img src="../assets/img/addTask.png">Add Task</a>
+            <a href="#"><img src="../assets/img/contacts.png">Contacts</a>
+        </div>
+        <div class="legalNotice">
+            <a href="#"><img src="../assets/img/legalNotice.png">Imprint</a>
+            <a href="#"><img src="../assets/img/legalNotice.png">Data-Protection</a>
+        </div>
+    </div>
+    <div>
+        <span>Kanban Project Management Tool</span>
+        <div>
+            <img>
+            <img>
+        </div>
+    </div>
+
+    <div class="component">
+        <app-summary></app-summary>
+    </div>
+</div>
