--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,17 @@
 <div class="loginComponent">
     <header>
-        <img src="../../assets/img/logo.png">
+
+
+
+        <div>
+
+        </div>
         <div class="rightHeader">
             <p>Not a Join user?</p>
             <button>Sign up</button>
         </div>
     </header>
+    <img class="logo" src="../../assets/img/logo.png">
     <div class="loginSection">
         <h1>Log in</h1>
         <div class="blueLine"></div>
@@ -26,4 +32,6 @@
             </div>
         </form>
     </div>
+    <div class="startAnimaton"></div>
+    <!-- <img class="animationImg" src="../../assets/img/logo.png"> -->
 </div>
