--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,16 +8,18 @@
     </header>
     <div class="menu">
         <img class="logo" src="../assets/img/logowhite.png">
-        <div class="links">
-            <a class="select" href="#"><img src="../assets/img/summary.png">Summary</a>
-            <a href="#"><img src="../assets/img/board.png">Board</a>
-            <a href="#"><img src="../assets/img/addTask.png">Add Task</a>
-            <a href="#"><img src="../assets/img/contacts.png">Contacts</a>
-        </div>
-        <div class="legalNotice">
-            <a href="#"><img src="../assets/img/legalNotice.png">Imprint</a>
-            <a href="#"><img src="../assets/img/legalNotice.png">Data-Protection</a>
-        </div>
+
+        <ul class="links">
+            <li routerLinkActive="select" [routerLink]="['summary']"><img src="../assets/img/summary.png">Summary</li>
+            <li [routerLink]="['board']" routerLinkActive="select"><img src="../assets/img/board.png">Board</li>
+            <li routerLinkActive="select" [routerLink]="['addtask']"><img src="../assets/img/addTask.png">Add Task</li>
+            <li routerLinkActive="select" [routerLink]="['contacts']"><img src="../assets/img/contacts.png">Contacts</li>
+        </ul>
+
+        <ul class="legalNotice">
+            <li [routerLink]="['imprint']"><img src="../assets/img/legalNotice.png">Imprint</li>
+            <li [routerLink]="['dataprotection']"><img src="../assets/img/legalNotice.png">Data-Protection</li>
+        </ul>
     </div>
     <div>
         <span>Kanban Project Management Tool</span>
@@ -28,6 +30,6 @@
     </div>
 
     <div class="component">
-        <app-summary></app-summary>
+        <router-outlet></router-outlet>
     </div>
 </div>
