--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,7 +26,7 @@ header {
         margin-right: 36px;
         .user {
             margin-left: 26px;
-            border: 3px solid #2A3647;
+            border: 3px solid #2a3647;
             border-radius: 100%;
         }
     }
@@ -54,11 +54,13 @@ header {
         flex-direction: column;
         color: #cdcdcd;
         top: 290px;
+        margin: 0;
         margin-top: -150px;
+        padding: 0;
         .select {
             background: #091931;
         }
-        a {
+        li {
             height: 46px;
             padding: 8px 53px 8px 53px;
             display: flex;
@@ -68,6 +70,7 @@ header {
             font-family: "inter", sans-serif;
             font-size: 16px;
             font-weight: 400;
+            cursor: pointer;
             img {
                 width: 24px;
                 height: 24px;
@@ -81,7 +84,8 @@ header {
         flex-direction: column;
         color: #cdcdcd;
         top: 290px;
-        a {
+        padding: 0;
+        li {
             height: 46px;
             padding: 8px 40px 8px 40px;
             display: flex;
@@ -104,5 +108,5 @@ header {
     left: 232px;
     right: 0;
     bottom: 0;
-    background: #F6F7F8;
+    background: #f6f7f8;
 }
