--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -14,7 +14,7 @@ header {
     left: 0;
     right: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     .rightHeader {
         display: flex;
         align-items: center;
