--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,1 +1,57 @@
-<p>summary works!</p>
+<div class="mainContainer">
+    <div class="firstSection">
+        <h1>Summary</h1>
+        <img src="../../assets/img/blueLine.png">
+        <span>Everything in a nutshell!</span>
+    </div>
+    <div class="secondSection">
+        <button class="field ">
+            <h2>5</h2>
+            <span>Task in<br>Board</span>
+        </button>
+        <button class="middleButton">
+            <h2>2</h2>
+            <span>Task in<br>Progress</span>
+        </button>
+        <button>
+            <h2>2</h2>
+            <span>Awaiting Feedback</span>
+        </button>
+    </div>
+    <div>
+        <div class="thirdSection">
+            <button>
+                <img class="orangeArrow" src="../../assets/img/orangArrow.png ">
+                <div class="leftText">
+                    <h2>1</h2>
+                    <span>Urgent</span>
+                </div>
+                <img src="../../assets/img/greyLine.png">
+                <div class="rightText">
+                    <h3>October 16, 2022</h3>
+                    <span>Upcoming Deadline</span>
+                </div>
+            </button>
+            <div class="welcome">
+                <h3>Good morning,</h3>
+                <h2>Sofia Müller</h2>
+            </div>
+        </div>
+    </div>
+    <div class="lastSection">
+        <button>
+            <img src="../../assets/img/pencil.png ">
+            <div>
+                <h2>1</h2>
+                <span>To-do</span>
+            </div>
+        </button>
+        <button>
+            <img src="../../assets/img/done.png ">
+            <div>
+                <h2>1</h2>
+                <span>Done</span>
+            </div>
+        </button>
+    </div>
+</div>
