--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -24,5 +24,27 @@ header {
             border: 3px solid #2a3647;
             border-radius: 100%;
         }
+        img {
+            cursor: pointer;
+        }
+    }
+    button {
+        position: absolute;
+        right: 36px;
+        top: 89px;
+        box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+        border-radius: 20px 0px 20px 20px;
+        width: 130px;
+        height: 53px;
+        background: #2a3647;
+        border: none;
+        font-weight: 400;
+        font-size: 16px;
+        color: #cdcdcd;
+        cursor: pointer;
+        &:hover {
+            background-color: #29abe2;
+            color: #ffff;
+        }
     }
 }
