--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<router-outlet name="loginSide"></router-outlet>
+<!-- <router-outlet name="loginSide"></router-outlet> -->
 
 <div class="mainContainer">
     <app-header></app-header>
