--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
     </ul>
 
     <ul class="legalNotice">
-        <li [routerLink]="['imprint']"><img src="../assets/img/legalNotice.png">Imprint</li>
-        <li [routerLink]="['dataprotection']"><img src="../assets/img/legalNotice.png">Data-Protection</li>
+        <li routerLinkActive="select" [routerLink]="['legalnotice']"><img src="../assets/img/legalNotice.png">Legal notice
+        </li>
     </ul>
 </div>
