install angular material start with contact side

--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -19,7 +19,8 @@
             </label>
             <select>
                 <option>Select Task category</option>
-                <option>New category<div>Hallo Welt</div></option>
+                <option>New category<div>Hallo Welt</div>
+                </option>
                 <option>Sales</option>
                 <option>Backoffice</option>
             </select>
@@ -49,7 +50,7 @@
             </div>
             <div class="subTasks">
                 <label>
-                Subtasks
+                    Subtasks
                 </label>
                 <button>
                     <span>Add new subtask</span>
@@ -63,7 +64,10 @@
         </div>
     </div>
     <div class="buttons">
-        <button class="firstButton">Clear <img src="../../assets/img/clear.png"></button>
-        <button class="secondButton">Create Task <img src="../../assets/img/createTask.png"></button>
+        <button class="firstButton">
+            Clear
+            <mat-icon aria-hidden="true" fontIcon="close"></mat-icon>
+        </button>
+        <button class="secondButton">Create Task <mat-icon aria-hidden="true" fontIcon="done"></mat-icon></button>
     </div>
 </div>
