--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,23 @@
-<p>contacts works!</p>
+<div>
+    <div>
+        <div>A</div>
+        <mat-divider></mat-divider>
+        <div>
+            <div>MB</div>
+            <div>
+                <div>Manuel Bärlocher</div>
+                <div> manuell@bluewin.ch </div>
+            </div>
+        </div>
+        <div>B</div>
+        <mat-divider></mat-divider>
+        <div>
+            <div>MB</div>
+            <div>
+                <div>Manuel Bärlocher</div>
+                <div> manuell@bluewin.ch </div>
+            </div>
+        </div>
+
+    </div>
+</div>
