start with contact component

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,23 +1,61 @@
-<div>
-    <div>
-        <div>A</div>
-        <mat-divider></mat-divider>
-        <div>
-            <div>MB</div>
+<div class="mainContainer">
+    <div class="contactList">
+        <h3>A</h3>
+        <mat-divider class="divider"></mat-divider>
+        <div class="contact selectContact">
+            <div class="contactIcon">MB</div>
             <div>
-                <div>Manuel Bärlocher</div>
-                <div> manuell@bluewin.ch </div>
+                <div class="contactName">Manuel Bärlocher</div>
+                <div class="contactMail"> manuell@bluewin.ch </div>
             </div>
         </div>
-        <div>B</div>
-        <mat-divider></mat-divider>
-        <div>
-            <div>MB</div>
+        <div class="contact">
+            <div class="contactIcon">MB</div>
             <div>
-                <div>Manuel Bärlocher</div>
-                <div> manuell@bluewin.ch </div>
+                <div class="contactName">Manuel Bärlocher</div>
+                <div class="contactMail"> manuell@bluewin.ch </div>
+            </div>
+        </div>
+        <h3>B</h3>
+        <mat-divider class="divider"></mat-divider>
+        <div class="contact">
+            <div class="contactIcon">MB</div>
+            <div>
+                <div class="contactName">Manuel Bärlocher</div>
+                <div class="contactMail"> manuell@bluewin.ch </div>
             </div>
         </div>
 
+    </div>
+    <div class="rightContainer">
+        <div class="firstSection">
+            <h1>Contacts</h1>
+            <img src="../../assets/img/blueLine.png">
+            <span>Better with a team</span>
+        </div>
+        <div>
+            <div class="contactTitle">
+                <div class="contactIconRight">MB</div>
+                <div class="rightContactTitle">
+                    <h2>Manuel Bärlocher</h2>
+                    <div class="addTask">
+                        <mat-icon>add</mat-icon>
+                        <span>Add Task</span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h3>Contact Information</h3>
+                <mat-icon>edit</mat-icon>
+                <span>Edit Contact</span>
+            </div>
+            <div>
+                <h4>Email</h4>
+                <span>manuell@bluewin.ch</span>
+                <h4>Phone</h4>
+                <span>+41 79 836 03 16</span>
+            </div>
+        </div>
+        <button>New contact<mat-icon>person_add</mat-icon></button>
     </div>
 </div>
