--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -106,17 +106,18 @@ h3 {
         margin-left: 67px;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
-        height: 150px;
         h3 {
             font-weight: 500;
             font-size: 47px;
+            margin-bottom: 3px;
+            height: 56px;
         }
         h2 {
             margin: 0;
             font-weight: 700;
             font-size: 64px;
             color: #29abe2;
+            height: 77px;
         }
     }
 }
