start with board, finish contact

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -44,18 +44,20 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="contactInformationContainer">
                 <h3>Contact Information</h3>
-                <mat-icon>edit</mat-icon>
-                <span>Edit Contact</span>
+                <div>
+                    <img src="../../assets/img/pencil2.png">
+                    <span>Edit Contact</span>
+                </div>
             </div>
-            <div>
+            <div class="contactAdress">
                 <h4>Email</h4>
-                <span>manuell@bluewin.ch</span>
+                <span class="mail">manuell@bluewin.ch</span>
                 <h4>Phone</h4>
                 <span>+41 79 836 03 16</span>
             </div>
         </div>
-        <button>New contact<mat-icon>person_add</mat-icon></button>
+        <button>New contact<img src="../../assets/img/addContact.png"></button>
     </div>
 </div>
