--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,29 @@
-<p>board works!</p>
+<div>
+    <div>
+        <h1>Board</h1>
+        <div>
+            <div class="searchInput">
+                <input placeholder="Find Task">
+                <img src="../../assets/img/search.png">
+            </div>
+            <button>Add Task</button>
+        </div>
+    </div>
+    <div>
+        <div class="example-container">
+            <h2>To do</h2>
+
+            <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo" [cdkDropListConnectedTo]="[doneList]" class="example-list" (cdkDropListDropped)="drop($event)">
+                <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+            </div>
+        </div>
+
+        <div class="example-container">
+            <h2>Done</h2>
+
+            <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="done" [cdkDropListConnectedTo]="[todoList]" class="example-list" (cdkDropListDropped)="drop($event)">
+                <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+            </div>
+        </div>
+    </div>
+</div>
