remove Material Angular

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,7 +1,7 @@
 <div class="mainContainer">
     <div class="contactList">
         <h3>A</h3>
-        <mat-divider class="divider"></mat-divider>
+        <div class="divider"></div>
         <div class="contact selectContact">
             <div class="contactIcon">MB</div>
             <div>
@@ -17,7 +17,7 @@
             </div>
         </div>
         <h3>B</h3>
-        <mat-divider class="divider"></mat-divider>
+        <div class="divider"></div>
         <div class="contact">
             <div class="contactIcon">MB</div>
             <div>
