--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -17,13 +17,11 @@
 .mat-list-icon {
     color: rgba(0, 0, 0, 0.54);
 }
-
 .divider {
     width: 323px;
-    display: flex;
-    justify-content: center;
     margin-left: 65px;
-    color: #d1d1d1;
+    border: 1px solid #d1d1d1;
+    border-radius: 3px;
 }
 
 .contact {
@@ -187,14 +185,14 @@ button {
     padding: 18px 10px;
     background: #2a3647;
     color: white;
-    border: 1px solid #2A3647;
+    border: 1px solid #2a3647;
     img {
         margin-left: 10px;
         height: 30px;
     }
     &:hover {
-        background: #29ABE2;
-        border: 1px solid #29ABE2;
+        background: #29abe2;
+        border: 1px solid #29abe2;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
 }
