different scss changes

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,7 +1,7 @@
-<div>
-    <div>
+<div class="mainContainer">
+    <div class="headContainer">
         <h1>Board</h1>
-        <div>
+        <div class="headRightSide">
             <div class="searchInput">
                 <input placeholder="Find Task">
                 <img src="../../assets/img/search.png">
