--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,11 @@
-.mainContainer {
-    height: 100vh;
-    width: 100%;
-}
-
 .component {
-    position: absolute;
-    top: 89px;
-    left: 232px;
-    right: 0;
-    bottom: 0;
+
+    margin: 89px 0 0 232px;
+    height: calc(100vh - 89px);
+    width: calc(100% - 232px);
     background: #f6f7f8;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
+
