--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,68 +1,82 @@
-.searchInput {
+.mainContainer {
+    font-family: "inter", sans-serif !important;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    width: 251px;
-    height: 51px;
-    background: #FFFFFF;
-    input {
-        border: none;
-        border-right: 1px solid rgba(0, 0, 0, 0.2);
-        height: 20px;
-    }
+    flex-direction: column;
+    margin-left: 70px;
+    box-sizing: border-box;
 }
 
-// .example-container {
-//     width: 400px;
-//     max-width: 100%;
-//     margin: 0 25px 25px 0;
-//     display: inline-block;
-//     vertical-align: top;
-// }
+h1 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 61px;
+    line-height: 120%;
+    margin: 0;
+}
 
-// .example-list {
-//     border: solid 1px #ccc;
-//     min-height: 60px;
-//     background: white;
-//     border-radius: 4px;
-//     overflow: hidden;
-//     display: block;
-// }
-
-// .example-box {
-//     padding: 20px 10px;
-//     border-bottom: solid 1px #ccc;
-//     color: rgba(0, 0, 0, 0.87);
-//     display: flex;
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-between;
-//     box-sizing: border-box;
-//     cursor: move;
-//     background: white;
-//     font-size: 14px;
-// }
-
-// .cdk-drag-preview {
-//     box-sizing: border-box;
-//     border-radius: 4px;
-//     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-// }
-
-// .cdk-drag-placeholder {
-//     opacity: 0;
-// }
-
-// .cdk-drag-animating {
-//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-// }
-
-// .example-box:last-child {
-//     border: none;
-// }
-
-// .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-//     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-// }
+.title {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    .titleRightSection {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        button {
+            bottom: 64px;
+            right: 52px;
+            display: flex;
+            align-items: center;
+            width: 137px;
+            height: 51px;
+            border-radius: 10px;
+            font-weight: 700;
+            font-size: 21px;
+            border-radius: 10px;
+            cursor: pointer;
+            padding: 18px 10px;
+            background: #2a3647;
+            color: white;
+            border: 1px solid #2a3647;
+            img {
+                margin-left: 10px;
+                height: 30px;
+            }
+            &:hover {
+                background: #29abe2;
+                border: 1px solid #29abe2;
+                filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+            }
+        }
+    }
+    .searchInput {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 8px;
+        width: 251px;
+        height: 51px;
+        background: #ffffff;
+        input {
+            border: none;
+            border-right: 1px solid rgba(0, 0, 0, 0.2);
+            height: 20px;
+        }
+        img {
+            margin-right: 24px;
+        }
+    }
+    .contactIcon {
+        background-color: orange;
+        width: 42px;
+        height: 42px;
+        border-radius: 100%;
+        border: 1px solid #ffffff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 12px;
+        color: white;
+    }
+}
