finish header board

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -6,10 +6,10 @@
                 <input placeholder="Find Task">
                 <img src="../../assets/img/search.png">
             </div>
-            <button>Add Task</button>
+            <button><span>Add Task</span><img src="../../assets/img/addTaskWhite.png"></button>
         </div>
     </div>
-    <div>
+    <div class="secondContainer">
         <div>
             <div>
                 <h2>To do</h2>
