--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -184,10 +184,15 @@ h1 {
     align-items: center;
     width: 209px;
     margin-top: 20px;
-    div {
+    .progressBar {
         width: 138px;
         height: 8px;
         background: #f4f4f4;
+        border-radius: 2px;
+    }
+    .progressStateNow {
+        background-color: #29abe2;
+        height: 8px;
         border-radius: 2px;
     }
     span {
@@ -203,7 +208,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 207px;
+    padding-left: 6px;
+    width: 201px;
     margin-top: 20px;
     img {
         margin-right: 10px;
@@ -229,7 +235,21 @@ h1 {
 }
 
 .contactIcon {
-    background-color: #ee00d6;
+    margin-left: -6px;
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
+    border: 1px solid #ffffff;
+    font-weight: 400;
+    font-size: 12px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.moreContactsIcon {
+    background-color: #2A3647;
     margin-left: -6px;
     width: 35px;
     height: 35px;
@@ -254,4 +274,8 @@ h1 {
 
 .lastSectionBoard {
     margin-left: 2px;
+}
+
+.marginContainer {
+    margin-bottom: 25px;
 }
