--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -91,15 +91,10 @@
     align-items: center;
     width: 209px;
     margin-top: 20px;
-    .progressBar {
+    div {
         width: 138px;
         height: 8px;
         background: #f4f4f4;
-        border-radius: 2px;
-    }
-    .progressStateNow {
-        background-color: #29abe2;
-        height: 8px;
         border-radius: 2px;
     }
     span {
@@ -115,8 +110,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 6px;
-    width: 201px;
+    width: 207px;
     margin-top: 20px;
     img {
         margin-right: 10px;
@@ -142,21 +136,7 @@
 }
 
 .contactIcon {
-    margin-left: -6px;
-    width: 35px;
-    height: 35px;
-    border-radius: 100%;
-    border: 1px solid #ffffff;
-    font-weight: 400;
-    font-size: 12px;
-    color: #ffffff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.moreContactsIcon {
-    background-color: #2A3647;
+    background-color: #ee00d6;
     margin-left: -6px;
     width: 35px;
     height: 35px;
@@ -181,8 +161,4 @@
 
 .lastSectionBoard {
     margin-left: 2px;
-}
-
-.marginContainer {
-    margin-bottom: 25px;
 }
